# amz-tango-card-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  account.json.sample  amazon.json.sample  amz_tango_card_gmail_scrapper.py  config.example.yaml  config.example.yml  email.json.sample  from.json.sample  pyproject.toml  requirements.txt
amz_tango_card_scraper/: __main__.py  amz_tango_card_scraper.py  browser.py  config_reader.py  gmail_scraper.py  main.py  schemas.py  tango_scraper.py
amz_tango_card_scraper/amazon_redeemer/: amazon_redeemer.py  constants.py  helpers.py
amz_tango_card_scraper/browser/: __init__.py  actions.py  browser_chrome.py  browser_extra_actions.py  browser_options.py  chrome.py  extra_actions.py  helpers.py  options.py  proxies.py
amz_tango_card_scraper/config_handler/: __init__.py  config_handler.py  config_handler_helpers.py
amz_tango_card_scraper/config_parser/: config_parser.py  helpers.py
amz_tango_card_scraper/gmail_scraper/: constants.py  gmail_scraper.py  helpers.py
amz_tango_card_scraper/message/: message_builder.py  message_sender.py
amz_tango_card_scraper/tango_scraper/: constants.py  tango_scraper.py
amz_tango_card_scraper/utils/: logger.py  schemas.py
amz_tango_card_scrapper/: browser.py  config_reader.py  gmail_scraper.py  main.py
amz_tango_card_scrapper/utils/: config_reader.py  schemas.py  types.py
app/: browser.py  gmail_scraper.py  main.py
app/amazon_redeemer/: amazon_redeemer.py  constants.py  helpers.py
app/browser/: __init__.py  chrome.py  constants.py  extra_actions.py  options.py
app/config_handler/: __init__.py  config_handler.py  helpers.py
app/config_parser/: config_parser.py  helpers.py
app/gmail_scraper/: __init__.py  constants.py  gmail_scraper.py  helpers.py
app/message/: __init__.py  message_builder.py  message_sender.py  message_storage.py
app/tango_scraper/: __init__.py  tango_scraper.py
app/utils/: __init__.py  otp.py  schemas.py
docs/: amz_tango_card_scraper.amazon_redeemer.rst  amz_tango_card_scraper.browser.rst  amz_tango_card_scraper.config_parser.rst  amz_tango_card_scraper.gmail_scraper.rst  amz_tango_card_scraper.message.rst  amz_tango_card_scraper.rst  amz_tango_card_scraper.tango_scraper.rst  amz_tango_card_scraper.utils.rst  conf.py  index.rst  make.bat  modules.rst  src.amazon_redeemer.rst  src.browser.rst  src.config_parser.rst  src.gmail_scraper.rst  src.message.rst  src.rst  src.tango_scraper.rst  src.utils.rst
src/: main.py
src/amazon_redeemer/: amazon_redeemer.py  (+2 more)
tests/: test_proxies.py  test_utils.py
(+8 files in other folders)
