[tool.poetry]
name = "amz-tango-card-scraper"
version = "0.1.0"
description = "A Python project that automates the process of scraping and redeeming Amazon Gift Card codes from Microsoft Rewards emails."
authors = ["dmarts05 <dmarts05@estudiantes.unileon.es>"]
readme = "README.md"
packages = [{include = "amz_tango_card_scraper"}]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = "^2.30.0"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
pyyaml = "^6.0"
pyotp = "^2.8.0"
beautifulsoup4 = "^4.12.2"
selenium-stealth = "^1.0.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
types-requests = "^2.30.0.0"
types-pyyaml = "^6.0.12.9"
types-beautifulsoup4 = "^4.12.0.5"
sphinx = "^7.0.1"
furo = "^2023.5.20"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
